<?xml version="1.0"?>
<package format="3">
  <name>uav_mujoco_ros2_control</name>
  <version>0.0.0</version>
  <description>MuJoCo UAV SystemInterface</description>
  <maintainer email="Rauch.Christian@gmx.de">Christian Rauch</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>hardware_interface</depend>
  <depend>pluginlib</depend>
  <depend>tf2_ros</depend>
  <depend>mujoco</depend>
  <depend>glfw</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
